[gd_scene load_steps=3 format=3 uid="uid://bmqr25q7ux3is"]

[ext_resource type="Script" path="res://scenes/socket/client.gd" id="1_s3oqh"]
[ext_resource type="Script" path="res://scenes/socket/server.gd" id="2_lrdah"]

[node name="WebRTC" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Client" type="Node" parent="." node_paths=PackedStringArray("multiplayer_manager")]
script = ExtResource("1_s3oqh")
multiplayer_manager = NodePath("")

[node name="LobbyVal" type="LineEdit" parent="Client"]
offset_left = 157.0
offset_top = 127.0
offset_right = 224.063
offset_bottom = 158.0

[node name="Server" type="Node" parent="."]
script = ExtResource("2_lrdah")

[node name="StartServer" type="Button" parent="."]
layout_mode = 0
offset_left = 309.0
offset_top = 14.0
offset_right = 367.0
offset_bottom = 45.0
text = "Server"

[node name="StartClient" type="Button" parent="."]
layout_mode = 0
offset_left = 34.0
offset_top = 14.0
offset_right = 87.0
offset_bottom = 45.0
text = "Client"

[node name="test" type="Button" parent="."]
layout_mode = 0
offset_left = 42.0
offset_top = 74.0
offset_right = 83.0
offset_bottom = 105.0
text = "Test"

[node name="test2" type="Button" parent="."]
layout_mode = 0
offset_left = 316.0
offset_top = 70.0
offset_right = 366.0
offset_bottom = 101.0
text = "Test2"

[node name="lobby" type="Button" parent="."]
layout_mode = 0
offset_left = 44.0
offset_top = 129.0
offset_right = 133.0
offset_bottom = 160.0
text = "Join Lobby"

[connection signal="button_down" from="StartServer" to="Server" method="_on_start_server_button_down"]
[connection signal="button_down" from="StartClient" to="Client" method="_on_start_client_button_down"]
[connection signal="button_down" from="test" to="Client" method="_on_test_button_down"]
[connection signal="button_down" from="test2" to="Server" method="_on_test_2_button_down"]
[connection signal="button_down" from="lobby" to="Client" method="_on_lobby_button_down"]
